changing homepage in pckg.json one more time

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-stencil",
-  "homepage": "/dl-notes",
+  "homepage": "https://swimgirlnv.github.io/dl-notes/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
