--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-stencil",
-  "homepage": "https://swimgirlnv.github.io/dl-notes/",
+  "homepage": "https://github.com/swimgirlnv/dl-notes.git/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
